<resources>
    <string name="app_name">SomeFood</string>
    <string name="button_Registration">Регистрация</string>
    <string name="button_sign_in">Авторизация</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Пароль</string>
    <string name="sign">Войти</string>
    <string name="Favorite">Избранное</string>
    <string name="detail_fragment_info">Окно для детального просмотра блюда</string>
    <string name="foor_iv">нажмите для отображения детальной информации</string>
    <string name="nameFood">Блюдо </string>
    <string name="descriptionFood">Description</string>
    <string name="auth">Авторизация</string>
    <string name="registr">Регистрация</string>
    <string name="myBascet">Моя корзина</string>
    <string name="order">Доступные заказы</string>
    <string name="doubleRegistr">Пользователь уже зарегистрирован</string>
    <string name="unCorrectPassword">Неверный логин/пароль</string>
    <string name="signOut">Выход из акканута</string>
    <string name="addToFavorite">добавленно в избранное</string>
    <string name="checkToOrder">Уточните заказ</string>
    <string name="createOrder">Сделать заказ</string>
    <string name="timeOrder">Желаемое время выполнения заказа</string>
    <string name="priceOrder">Стоимость</string>
    <string name="newOrder">Новый заказ</string>
    <string name="food">food</string>
    <string name="email">E-mail</string>
    <string name="iCreator">Я исполнитель</string>
    <string name="foodName">Name</string>
    <string name="timeToComplit">Время выполнения</string>
    <string name="priceInt">Стоимость</string>
    <string name="inJob">Взять в работу</string>
    <string name="inJobinOrderCreator">В работe</string>
    <string name="menu">Меню</string>
    <string name="goToFavorite">Перейти в избранное</string>
    <string name="goToBascet">Перейти в корзину</string>
    <string name="goToSignOut">Выйти из аккаунта</string>
    <string name="price">Цена</string>
    <string name="name">Название</string>
    <string name="time">Время</string>
    <string name="priceWithDot">price:</string>
    <string name="status">status</string>
    <string name="complit">Готово</string>
    <string name="pickUpOrder">Заказ получен</string>
    <string name="goodEat">Приятного аппетита</string>
    <string name="goToMyOrder">Перейти в мои заказы</string>
    <string name="myOrderByCreator">Мои заказы</string>
    <string name="goToProfile">Перейти в профиль</string>
    <string name="profile">Профиль</string>
    <string name="complitInProfile">Выполнено</string>
    <string name="editPhotoInProfile">Изменить фото профиля</string>
    <string name="photoInProfile">Фото профиля</string>
    <string name="orderIntInProfile">Заказано</string>
    <string name="editDecriptionInProfile">Изменить описание профиля</string>
    <string name="starForCreatorInProfile">Оценка как исполнителя</string>
    <string name="defStarInProfile">5</string>
    <string name="midleStarInProfile">Оценка\nобщая</string>
    <string name="starForClientInProfile">Оценка как заказчика</string>
    <string name="descriptionInProfile">Описание</string>
    <string name="inWait">В ожидании</string>

    <string name="timeHoursMinutesFormatter" translatable="false">%02d:%02d</string>
    <string name="starsForClientInHistoryOrder">Оценка клиента</string>
    <string name="starsForCreatorInHistoryOrder">Оценка заказчика</string>


</resources>