<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/myFavorite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="always"
        android:title="@string/goToFavorite" />

    <item
        android:id="@+id/myBasket"
        android:icon="@drawable/ic_basket"
        app:showAsAction="always"
        android:title="@string/goToBascet" />

    <item
        android:id="@+id/goToProfile"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="always"
        android:title="@string/goToProfile" />

    <item
        android:id="@+id/logOut"
        android:icon="@drawable/ic_login"
        app:showAsAction="always"
        android:title="@string/goToSignOut" />


</menu>